Day14-NetworkPolicies/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: db-pod
  labels:
    app: db
spec:
  containers:
    - name: cont-1
      image: nginx
      ports:
        - containerPort: 80

#create 2 pods with label app: swiggy and one with app: zomato and app: db, enable comm from swiggy---->db
