Day14-NetworkPolicies/egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: swiggy-egress-to-db
spec:
  podSelector:
    matchLabels:
      app: swiggy
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: db
